<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.96">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:backgroundTint="#DD2C00"
                android:onClick="btnClear"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:backgroundTint="#DD2C00" />

            <Button
                android:id="@+id/btnparentesis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnParentisis"
                android:text="@string/parentesis"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btnexp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnExp"
                android:text="@string/exponente"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btndiv"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnDivision"
                android:text="@string/division"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnSiete"
                android:text="@string/siete"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnOcho"
                android:text="@string/ocho"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnNueve"
                android:text="@string/nueve"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btnMul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnMultiplicacion"
                android:text="@string/multiplicacion"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnCuatro"
                android:text="@string/cuatro"
                android:textColor="#FFFCFC"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnCinco"
                android:text="@string/cinco"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnSeis"
                android:text="@string/seis"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btnresta"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnResta"
                android:text="@string/resta"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnUno"
                android:text="@string/uno"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnDos"
                android:text="@string/dos"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnTres"
                android:text="@string/tres"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btnsuma"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnsuma"
                android:text="@string/suma"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnmasmenos"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnMasMenos"
                android:text="@string/masmenos"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btncero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnCero"
                android:text="@string/cero"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525" />

            <Button
                android:id="@+id/btnpunto"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnPunto"
                android:text="@string/punto"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#292525"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/btnIgual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circulo"
                android:onClick="btnIgual"
                android:text="@string/igual"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:backgroundTint="#43a047" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txtvista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:textAlignment="textEnd"
        android:inputType="none"
        tools:ignore="LabelFor,RtlCompat"
        android:textSize="36sp"
        />

    <ImageButton
        android:id="@+id/borrar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/circulo"
        android:contentDescription="@string/borrar"
        android:onClick="btnBorrar"
        app:backgroundTint="#292525"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/borrar" />
</androidx.constraintlayout.widget.ConstraintLayout>